# pythonProject

./: README.md  pyproject.toml
src/: generators.py  main.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_func.py  test_generators.py  test_processing.py
